--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Around the U.S.</title>
     <link rel="stylesheet" href="./pages/index.css" />
-    <script src="main.js" defer></script>
   </head>
   <body class="page">
     <header class="header block block_s">
@@ -167,6 +166,10 @@
 
     <footer class="footer block block_s">
       <p class="footer__copyright">© 2020 Around The U.S.</p>
-    </footer>
+	</footer>
+	
+
+	<script src="index.js"></script>
+
   </body>
 </html>
