re-factor html code

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
   <body class="page">
-    <header class="header block block_s">
+    <header class="header block">
       <img class="header__logo" src="./images/logo.svg" alt="header logo" />
     </header>
 
     <main>
-      <section class="profile block block_s">
+      <section class="profile block">
         <img
           class="profile__avatar"
           src="./images/image.jpg"
@@ -21,7 +21,7 @@
 
         <div class="profile__info">
           <div class="profile__name-container">
-            <h2 class="profile__name">Jacques Cousteau</h2>
+            <h1 class="profile__name">Jacques Cousteau</h1>
             <button class="profile__edit-button button"></button>
           </div>
           <p class="profile__about-me">Explorer</p>
@@ -30,127 +30,120 @@
         <button class="profile__add-button button"></button>
       </section>
 
-      <section class="elements block block_s">
+      <section class="elements block">
         <ul class="elements__list">
           <li class="elements__list-item">
-            <div class="elements__element">
+            <img
+              class="elements__image"
+              src="./images/yosemite.png"
+              alt="Yosemite Valley moutains in background with river and pine trees"
+            />
+            <div class="elements__title-container">
+              <h2 class="elements__location-name">Yosemite Valley</h2>
               <img
-                class="elements__image"
-                src="./images/yosemite.png"
-                alt="Yosemite Valley moutains in background with river and pine trees"
+                class="elements__like"
+                src="./images/heart.svg"
+                alt="outline of heart"
               />
-              <div class="elements__title-container">
-                <h2 class="elements__location-name">Yosemite Valley</h2>
-                <img
-                  class="elements__like"
-                  src="./images/heart.svg"
-                  alt="outline of heart"
-                />
-              </div>
             </div>
           </li>
           <li class="elements__list-item">
-            <div class="elements__element">
+            <img
+              class="elements__image"
+              src="./images/lake-louise.png"
+              alt="Lake Louise green lake with mountains on left and right sides"
+            />
+            <div class="elements__title-container">
+              <h2 class="elements__location-name">Lake Louise</h2>
               <img
-                class="elements__image"
-                src="./images/lake-louise.png"
-                alt="Lake Louise green lake with mountains on left and right sides"
+                class="elements__like"
+                src="./images/heart.svg"
+                alt="outline of heart"
               />
-              <div class="elements__title-container">
-                <h2 class="elements__location-name">Lake Louise</h2>
-                <img
-                  class="elements__like"
-                  src="./images/heart.svg"
-                  alt="outline of heart"
-                />
-              </div>
             </div>
           </li>
           <li class="elements__list-item">
-            <div class="elements__element">
+            <img
+              class="elements__image"
+              src="./images/bald-mountains.png"
+              alt="Bald Mountains sunset over moutains"
+            />
+            <div class="elements__title-container">
+              <h2 class="elements__location-name">Bald Mountains</h2>
               <img
-                class="elements__image"
-                src="./images/bald-mountains.png"
-                alt="Bald Mountains sunset over moutains"
+                class="elements__like"
+                src="./images/heart.svg"
+                alt="outline of heart"
               />
-              <div class="elements__title-container">
-                <h2 class="elements__location-name">Bald Mountains</h2>
-                <img
-                  class="elements__like"
-                  src="./images/heart.svg"
-                  alt="outline of heart"
-                />
-              </div>
             </div>
           </li>
           <li class="elements__list-item">
-            <div class="elements__element">
+            <img
+              class="elements__image"
+              src="./images/latemar.png"
+              alt="Latemar starry night behind snow covered mountain"
+            />
+            <div class="elements__title-container">
+              <h2 class="elements__location-name">Latemar</h2>
               <img
-                class="elements__image"
-                src="./images/latemar.png"
-                alt="Latemar starry night behind snow covered mountain"
+                class="elements__like"
+                src="./images/heart.svg"
+                alt="outline of heart"
               />
-              <div class="elements__title-container">
-                <h2 class="elements__location-name">Latemar</h2>
-                <img
-                  class="elements__like"
-                  src="./images/heart.svg"
-                  alt="outline of heart"
-                />
-              </div>
             </div>
           </li>
           <li class="elements__list-item">
-            <div class="elements__element">
+            <img
+              class="elements__image"
+              src="./images/vanoise-national-park.png"
+              alt="mountain lake vanoise national park"
+            />
+            <div class="elements__title-container">
+              <h2 class="elements__location-name">Vanois National...</h2>
               <img
-                class="elements__image"
-                src="./images/vanoise-national-park.png"
-                alt="mountain lake vanoise national park"
+                class="elements__like"
+                src="./images/heart.svg"
+                alt="outline of heart"
               />
-              <div class="elements__title-container">
-                <h2 class="elements__location-name">Vanois National...</h2>
-                <img
-                  class="elements__like"
-                  src="./images/heart.svg"
-                  alt="outline of heart"
-                />
-              </div>
             </div>
           </li>
           <li class="elements__list-item">
-            <div class="elements__element">
+            <img
+              class="elements__image"
+              src="./images/lago-di-braies.png"
+              alt="Lago di Braies row bow docked on a mountain lake"
+            />
+            <div class="elements__title-container">
+              <h2 class="elements__location-name">Lago di Braies</h2>
               <img
-                class="elements__image"
-                src="./images/lago-di-braies.png"
-                alt="Lago di Braies row bow docked on a mountain lake"
+                class="elements__like"
+                src="./images/heart.svg"
+                alt="outline of heart"
               />
-              <div class="elements__title-container">
-                <h2 class="elements__location-name">Lago di Braies</h2>
-                <img
-                  class="elements__like"
-                  src="./images/heart.svg"
-                  alt="outline of heart"
-                />
-              </div>
             </div>
           </li>
         </ul>
       </section>
+    </main>
 
-      <section class="edit-form">
+    <footer class="footer block">
+      <p class="footer__copyright">© 2020 Around The U.S.</p>
+	</footer>
+	
+	<section class="edit-form">
         <div class="edit-form__pop-up">
           <button class="edit-form__close button"></button>
-          <form class="edit-form__form" action="">
+          <form class="edit-form__form" action="#">
             <h2 class="edit-form__title">Edit profile</h2>
             <input
-              class="edit-form__input edit-form__input_name"
+              class="edit-form__input edit-form__name-input"
               type="text"
               name="name"
               maxlength="23"
               placeholder="Name"
             />
             <input
-              class="edit-form__input edit-form__input_about-me"
+              class="edit-form__input edit-form__about-me-input"
               type="text"
               name="about-me"
               maxlength="23"
@@ -162,14 +155,7 @@
           </form>
         </div>
       </section>
-    </main>
 
-    <footer class="footer block block_s">
-      <p class="footer__copyright">© 2020 Around The U.S.</p>
-	</footer>
-	
-
-	<script src="index.js"></script>
-
+    <script src="index.js"></script>
   </body>
 </html>
