--- a/index.html
+++ b/index.html
@@ -118,26 +118,26 @@
       <p class="footer__copyright">© 2020 Around The U.S.</p>
     </footer>
 
-    <section class="edit-form">
-      <div class="edit-form__dialog-window">
-        <button class="edit-form__close button"></button>
-        <form class="edit-form__form" action="#">
-          <h2 class="edit-form__title">Edit profile</h2>
+    <section class="popup">
+      <div class="popup__dialog-window">
+        <button class="popup__close button"></button>
+        <form class="popup__form" action="#">
+          <h2 class="popup__title">Edit profile</h2>
           <input
-            class="edit-form__input edit-form__input_margin_name"
+            class="popup__input popup__input_margin_name popup__input_type_name"
             type="text"
             name="name"
             maxlength="23"
             placeholder="Name"
           />
           <input
-            class="edit-form__input edit-form__input_margin_about-me"
+            class="popup__input popup__input_margin_about-me popup__input_type_about-me"
             type="text"
             name="about-me"
             maxlength="23"
             placeholder="About me"
           />
-          <button class="edit-form__submit button" type="submit">
+          <button class="popup__submit button" type="submit">
             Save
           </button>
         </form>
