--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <p class="footer__copyright">© 2020 Around The U.S.</p>
     </footer>
 
-    <section class="popup popup_type_edit">
+    <div class="popup popup_type_edit">
       <div class="popup__dialog-window">
-        <button class="popup__close popup__close_type_edit button"></button>
+        <button class="popup__close  button"></button>
         <form class="popup__form" action="#">
           <h2 class="popup__title">Edit profile</h2>
           <input
@@ -63,11 +63,11 @@
           </button>
         </form>
       </div>
-    </section>
+    </div>
 
-    <section class="popup popup_type_add">
+    <div class="popup popup_type_add">
       <div class="popup__dialog-window">
-        <button class="popup__close popup__close_type_add button"></button>
+        <button class="popup__close  button"></button>
         <form class="popup__form" action="#">
           <h2 class="popup__title">New place</h2>
           <input
@@ -87,15 +87,17 @@
           </button>
         </form>
       </div>
-    </section>
+    </div>
 
-    <section class="popup popup_type_image">
+    <div class="popup popup_type_image">
       <div class="popup__image-container">
-        <button class="popup__close popup__close_type_image button"></button>
-        <img src="" alt="" class="popup__full-size-image" />
-        <p class="popup__image-caption"></p>
+		<button class="popup__close  button"></button>
+		<figure>
+			<img src="" alt="" class="popup__full-size-image" />
+			<figcaption class="popup__image-caption"></figcaption>
+		</figure>
       </div>
-    </section>
+    </div>
 
     <template id="location-template">
       <li class="elements__list-item">
