--- a/index.html
+++ b/index.html
@@ -129,14 +129,13 @@
     <template id="location-template">
       <li class="elements__list-item">
         <button class="elements__trash button"></button>
-        <img class="elements__image" src="" />
+        <img class="elements__image" src="" alt="location image"/>
         <div class="elements__title-container">
           <h2 class="elements__location-name"></h2>
           <button class="elements__like button"></button>
         </div>
       </li>
     </template>
-    <script src="index.js"></script>
-    <script src="validate.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
