refactor utils.js file

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         </div>
       </li>
     </template>
+    <script type="text/javascript" src="./Utils.js"></script>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
