--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,17 @@
 
         <img
           class="profile__avatar"
-          src="./images/image.jpg"
-          alt="old man in wearing red beanie"
+          src="#"
         />
         <button class="profile__avatar-button button"></button>
 
 
         <div class="profile__info">
           <div class="profile__name-container">
-            <h1 class="profile__name">Jacques Cousteau</h1>
+            <h1 class="profile__name"></h1>
             <button class="profile__edit-button button"></button>
           </div>
-          <p class="profile__about-me">Explorer</p>
+          <p class="profile__about-me"></p>
         </div>
 
         <button class="profile__add-button button"></button>
